--- a/altario-exercise/src/app/core/components/generator/generator.component.html
+++ b/altario-exercise/src/app/core/components/generator/generator.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" *ngIf="info$ | async as info">
+  <form [formGroup]="generatorForm" (submit)="onSubmit()">
   <div class="row w-50 m-auto p-5">
     <div class="col-12">
       <div class="row">
@@ -8,13 +9,12 @@
             class="form-control form-rounded"
             placeholder="Enter character"
             maxlength="1"
-            [attr.disabled]="inputDisabled ? '' : null"
-            [(ngModel)]= "inputCharacter"
+            formControlName="character"
           />
         </div>
         <div class="col-4"></div>
         <div class="col-4 d-flex align-items-end justify-content-end">
-          <button type="button" class="btn btn-info" (click)="onClickGenerateGrid()">Generate 2nd Grid</button>
+          <button type="submit" class="btn btn-info">Generate 2nd Grid</button>
         </div>
       </div>
       <div class="row mt-3">
@@ -44,4 +44,5 @@
       </div>
     </div>
   </div>
+  </form>
 </div>
